Fix Vercel config - replace routes with rewrites

--- a/vercel.json
+++ b/vercel.json
@@ -10,14 +10,10 @@
       "use": "@vercel/static"
     }
   ],
-  "routes": [
+  "rewrites": [
     {
-      "src": "/api/products",
-      "dest": "/api/products.js"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/$1"
+      "source": "/api/products",
+      "destination": "/api/products.js"
     }
   ],
   "headers": [
